fix mobile horizontal scroll bars when header takes up >100vw

--- a/src/Aspire.Dashboard/wwwroot/css/app.css
+++ b/src/Aspire.Dashboard/wwwroot/css/app.css
@@ -183,6 +183,11 @@ h1 {
     /* we want less padding on mobile screens to preserve screen height for other elements */
     .page-header {
         padding: calc(var(--design-unit) * 1.5px) calc(var(--design-unit) * 0.5px) 0;
+        width: 100vw;
+    }
+
+    .page-header > h1 {
+        white-space: normal;
     }
 
     .hidden-on-mobile {
